--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,14 @@
-baseURL: https://xbqj.github.io/
+baseURL: "https://xbqj.github.io/"
 languageCode: zh-cn
 title: 携笔强军
+
+publicDir: docs
+defaultContentLanguage: zh-cn
+
+params:
+  assets:
+    favicon: "/favicon/favicon.ico"
+    favicon16x16: "/favicon/favicon-16x16.png"
+    favicon32x32: "/favicon/favicon-32x32.png"
+    apple_touch_icon: "/favicon/apple-touch-icon.png"
+    safari_pinned_tab: "/favicon/favicon-16x16.png"
