Draft for chapter troop life

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,6 +94,7 @@ nav:
       - militarylife/development/index.md
       - 考学深造: militarylife/development/education.md
       - 提干磨练: militarylife/development/promotion.md
+      - 复习规划: militarylife/development/review.md
     - 老兵寄语: 
       - militarylife/veteran/index.md
   - 退役安置: 
