Update: add interviews of veterans

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,5 +110,6 @@ nav:
       - 其他: settlement/officer/other.md
   - 老兵访谈: 
     - cases/index.md
+    - 老兵故事: cases/cases.md
   - 联系我们: 
     - contact/index.md
